<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/details_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.activities.DetailsActivity" />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/container_top90"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- City Name -->
        <TextView
            android:id="@+id/details_CityName_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingTop="8dp"
            android:text="Belgrade"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/details_Date_Tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Date -->
        <TextView
            android:id="@+id/details_Date_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="25.06.2020."
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/details_MaxTemp_Tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Maximum Daily Temperature -->
        <TextView
            android:id="@+id/details_MaxTemp_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/details_max_temp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/details_AvgTemp_Tv"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/details_MaxTemp_Num_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/details_MaxTemp_Tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Average Daily Temperature -->
        <TextView
            android:id="@+id/details_AvgTemp_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/details_avg_temp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/details_MinTemp_Tv"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/details_AvgTemp_Num_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/details_AvgTemp_Tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Minimum Daily Temperature -->
        <TextView
            android:id="@+id/details_MinTemp_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/details_min_temp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/details_WindSpeed_Tv"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/details_MinTemp_Num_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/details_MinTemp_Tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Maximum Wind Speed -->
        <TextView
            android:id="@+id/details_WindSpeed_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/details_wind_speed"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/details_UVCoef_Tv"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/details_WindSpeed_Num_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/details_WindSpeed_Tv"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- UV Coefficient -->
        <TextView
            android:id="@+id/details_UVCoef_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/details_uv_coefficient"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/details_UVCoef_Num_Tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/details_UVCoef_Tv"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>